--- a/Guia1 V1/index.html
+++ b/Guia1 V1/index.html
@@ -9,10 +9,10 @@
 <h1>Presione el nombre para ver la informacion personal</h1>
 
 <a href="Manuel.html">Manuel Hernandez</a><br>
-<a href="Abraham.html">Abraham Peñate </a>
-<a href="Guia1 V1\Carlos.html">Carlos José</a>
-<a href="Guia1 V1\Eliseo.html">Jose Eliseo</a>
-<a href="Guia1 V1\Josue.html">Josué Alejandro</a>
-<a href="Guia1 V1\Melvin.html">Melvin Alexis</a>
+<a href="Abraham.html">Abraham Peñate </a><br>
+<a href="Carlos.html">Carlos José</a><br>
+<a href="Eliseo.html">Jose Eliseo</a>
+<a href="Josue.html">Josué Alejandro</a>
+<a href="Melvin.html">Melvin Alexis</a>
 
 </html>
