--- a/Guia1 V1/index.html
+++ b/Guia1 V1/index.html
@@ -11,8 +11,8 @@
 <a href="Manuel.html">Manuel Hernandez</a><br>
 <a href="Abraham.html">Abraham Peñate </a><br>
 <a href="Carlos.html">Carlos José</a><br>
-<a href="Eliseo.html">Jose Eliseo</a>
-<a href="Josue.html">Josué Alejandro</a>
-<a href="Melvin.html">Melvin Alexis</a>
+<a href="Eliseo.html">Jose Eliseo</a><br>
+<a href="Josue.html">Josué Alejandro</a><br>
+<a href="Melvin.html">Melvin Alexis</a><br>
 
 </html>
