--- a/Guia1_VI_2/Paises/Belice.html
+++ b/Guia1_VI_2/Paises/Belice.html
@@ -13,19 +13,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\Belice\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/Belice/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\Belice\Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/Belice/Escudo.png" style="width:300px; height:auto;">
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\Belice\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Belice/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\Belice\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Belice/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\Belice\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Belice/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
