--- a/Guia1_VI_2/Paises/CostaRica.html
+++ b/Guia1_VI_2/Paises/CostaRica.html
@@ -13,19 +13,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\CostaRica\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\CostaRica\Escudo.jpg" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/Escudo.jpg" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\CostaRica\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\CostaRica\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\CostaRica\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
