--- a/Guia1_VI_2/Paises/ElSalvador.html
+++ b/Guia1_VI_2/Paises/ElSalvador.html
@@ -7,25 +7,25 @@
 </head>
 <body>
 
-    <h1>Informacion de</h1>
+    <h1>Informacion de El Salvador</h1>
 
     <section id="SimbolosPatrios">
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\ElSalvador\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/ElSalvador/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\ElSalvador\Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/ElSalvador/Escudo.png" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\ElSalvador\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/ElSalvador/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\ElSalvador\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/ElSalvador/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\ElSalvador\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/ElSalvador/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
     <section id="Historia"> <h3> Historia</h3>
