--- a/Guia1_VI_2/Paises/Guatemala.html
+++ b/Guia1_VI_2/Paises/Guatemala.html
@@ -13,19 +13,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\Guatemala\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\Guatemala\Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/Escudo.png" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\Guatemala\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\Guatemala\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\Guatemala\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
