--- a/Guia1_VI_2/Paises/Honduras.html
+++ b/Guia1_VI_2/Paises/Honduras.html
@@ -13,19 +13,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\Honduras\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/Honduras/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\Honduras\Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/Honduras/Escudo.png" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\Honduras\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Honduras/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\Honduras\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Honduras/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\Honduras\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Honduras/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
