--- a/Guia1_VI_2/index.html
+++ b/Guia1_VI_2/index.html
@@ -9,13 +9,15 @@
     
 <h1>Centroamerica se compone de los siguientes paises</h1>
     <ul>
-        <li><a href="\Guia1_VI_2\Paises\ElSalvador.html">El Salvador</a></li>
-        <li><a href="\Guia1_VI_2\Paises\Belice.html">Belice</a></li>
-        <li><a href="\Guia1_VI_2\Paises\CostaRica.html">Costa Rica</a></li>
-        <li><a href="\Guia1_VI_2\Paises\Guatemala.html">Guatemala</a></li>
-        <li><a href="\Guia1_VI_2\Paises\Honduras.html">Honduras</a></li>
-        <li><a href="\Guia1_VI_2\Paises\Nicaragua.html">Nicaragua</a></li>
-        <li><a href="\Guia1_VI_2\Paises\Panamá.html">Panamá</a></li>
+        <li><a href="Paises/ElSalvador.html">El Salvador</a></li>
+        <li><a href="Paises/Belice.html">Belice</a></li>
+        <li><a href="Paises/CostaRica.html">Costa Rica</a></li>
+        <li><a href="Paises/Guatemala.html">Guatemala</a></li>
+        <li><a href="Paises/Honduras.html">Honduras</a></li>
+        <li><a href="Paises/Nicaragua.html">Nicaragua</a></li>
+        <li><a href="Paises/Panamá.html">Panamá</a></li>
+
+
     </ul>
 
 </body>
