--- a/Guia1_VI_2/Paises/Nicaragua.html
+++ b/Guia1_VI_2/Paises/Nicaragua.html
@@ -13,19 +13,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="\Guia1_VI_2\img\Nicaragua\Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/Nicaragua/Bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="\Guia1_VI_2\img\Nicaragua\Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/Nicaragua/Escudo.png" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="\Guia1_VI_2\img\Nicaragua\Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Nicaragua/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="\Guia1_VI_2\img\Nicaragua\Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Nicaragua/Arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="\Guia1_VI_2\img\Nicaragua\Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Nicaragua/Flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
