--- a/Guia1_VI_2/Paises/Panamá.html
+++ b/Guia1_VI_2/Paises/Panamá.html
@@ -32,7 +32,7 @@
 
     <section id="Historia"> <h3> Historia</h3>
 
-        <p> Panamá, ubicado en el istmo que conecta América Central y América del Sur, tiene una historia profundamente
+        <p> Panamá, ubicado en el istmo conecta América Central y América del Sur, tiene una historia profundamente
             influenciada por su posición geográfica estratégica. Antes de la llegada de los europeos, la región estaba habitada
             por diversas culturas indígenas, como los kuna, los ngäbe y los emberá.</p>
         
