--- a/Guia1_VI_2/Paises/Panamá.html
+++ b/Guia1_VI_2/Paises/Panamá.html
@@ -14,19 +14,19 @@
         <h2>Simbolos Patrios</h2>
 
         <h3>Bandera Nacional</h3>
-        <img src="../img/Panama/Bandera.png" style="width:300px; height:auto;" >
+        <img src="../img/Panama/bandera.png" style="width:300px; height:auto;" >
 
         <h3>Escudo</h3>
-        <img src="../img/Panama/Escudo.png" style="width:300px; height:auto;" >
+        <img src="../img/Panama/escudo.png" style="width:300px; height:auto;" >
 
         <h3>Ave</h3>
-        <img src="../img/Panama/Animal.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Panama/animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="../img/Panama/Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Panama/arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
-        <img src="../img/Panama/Flor.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Panama/flor.jpg" style="width:300px; height:auto;" >
 
     </section>
 
