--- a/Guia1_VI_2/Paises/CostaRica.html
+++ b/Guia1_VI_2/Paises/CostaRica.html
@@ -22,7 +22,7 @@
         <img src="../img/CostaRica/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="../img/CostaRica/Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/CostaRica/arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
         <img src="../img/CostaRica/Flor.jpg" style="width:300px; height:auto;" >
