--- a/Guia1_VI_2/Paises/Guatemala.html
+++ b/Guia1_VI_2/Paises/Guatemala.html
@@ -22,7 +22,7 @@
         <img src="../img/Guatemala/Animal.jpg" style="width:300px; height:auto;" >
 
         <h3>Arbol</h3>
-        <img src="../img/Guatemala/Arbol.jpg" style="width:300px; height:auto;" >
+        <img src="../img/Guatemala/arbol.jpg" style="width:300px; height:auto;" >
 
         <h3>Flor</h3>
         <img src="../img/Guatemala/Flor.jpg" style="width:300px; height:auto;" >
